src/objects/ConfigText__c.object
<CustomObject>
    <description>A block of text that can be used in any application to configurable blocks of text, lists etc</description>
    <fields>
        <fullName>Body__c</fullName>
        <description>The text of the configuration item</description>
        <label>Body Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>The date the item was released as the current version</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>BDR: Contract Risk Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR: Income Block Help Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR: Approval Dialog Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR: Introduction Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR: BDR Search Screen Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR: Services Search Screen Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR: Fund Coverage Search Screen Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The version of the text. This allows different texts to be linked to different objects of the same type over time.</description>
        <label>Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isCurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether this version is the latest, and therefore default, version of the text</description>
        <label>isCurrent</label>
        <type>Checkbox</type>
    </fields>
    <label>ConfigText</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Config_Texts</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>isCurrent__c</columns>
        <columns>Version__c</columns>
        <columns>Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Config Help Texts</label>
    </listViews>
    <listViews>
        <fullName>Current_Config_Texts</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCurrent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Current Configuration Help Texts</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ConfigTexts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>